BRL-01: deploy with docker