@@ -1,29 +1,27 @@
 package com.laravel.brl.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.modelmapper.ModelMapper;
-import org.modelmapper.convention.MatchingStrategies;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.laravel.brl.dto.ResidenceDTO;
 import com.laravel.brl.models.Residence;
+import com.laravel.brl.models.TypeResidence;
 import com.laravel.brl.repository.ResidenceRepository;
 import com.laravel.brl.service.ResidenceService;
 
+import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
+
 @Service
+@RequiredArgsConstructor
 public class ResidenceServiceImpl implements ResidenceService{
 	
-	@Autowired
-	ResidenceRepository residenceRepository;
-	
-	@Autowired
-	ModelMapper modelMapper;
+	private final ResidenceRepository residenceRepository;
 
 	@Override
 	public ResidenceDTO saveResidence(ResidenceDTO r) {
+		r.setEtatResidence("Disponible");
 		return convertEntityToDto(residenceRepository.save(convertDtoToEntity(r)));
 	}
 
@@ -46,28 +44,51 @@ public class ResidenceServiceImpl implements ResidenceService{
 
 	@Override
 	public ResidenceDTO getResidence(Long id) {
-		return convertEntityToDto(residenceRepository.findById(id).get());
+		return residenceRepository.findById(id)
+				.map(this::convertEntityToDto)
+				.orElseThrow(() -> new EntityNotFoundException("Résidence non trouvé"));
 	}
 
 	@Override
 	public List<ResidenceDTO> getAllResidences() {
 		return residenceRepository.findAll().stream()
 				.map(this::convertEntityToDto)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@Override
-	public ResidenceDTO convertEntityToDto(Residence r) {
-		modelMapper.getConfiguration().setMatchingStrategy(MatchingStrategies.LOOSE); // pour retrouver des champs en declarer jdans la class principal (faire perdre en precision)
-		ResidenceDTO residenceDTO = modelMapper.map(r, ResidenceDTO.class);
-		return residenceDTO;
+	public ResidenceDTO convertEntityToDto(Residence r) {		
+		return ResidenceDTO.builder()
+				.idResidence(r.getIdResidence())
+				.nameResidence(r.getNameResidence())
+				.localisationResidence(r.getLocalisationResidence())
+				.prixResidence(r.getPrixResidence())
+				.typeResidence(
+						TypeResidence.builder()
+						.idTypeResidence(r.getTypeResidence().getIdTypeResidence())
+						.libeleTypeResidence(r.getTypeResidence().getLibeleTypeResidence())
+						.build()
+						)
+				.etatResidence(r.getEtatResidence())
+				.build();
 	}
 
 	@Override
 	public Residence convertDtoToEntity(ResidenceDTO r) {
-		Residence residence = new Residence();
-		residence = modelMapper.map(r, Residence.class);
-		return residence;
+		
+		return Residence.builder()
+				.idResidence(r.getIdResidence())
+				.nameResidence(r.getNameResidence())
+				.localisationResidence(r.getLocalisationResidence())
+				.prixResidence(r.getPrixResidence())
+				.typeResidence(
+						TypeResidence.builder()
+						.idTypeResidence(r.getTypeResidence().getIdTypeResidence())
+						.libeleTypeResidence(r.getTypeResidence().getLibeleTypeResidence())
+						.build()
+						)
+				.etatResidence(r.getEtatResidence())
+				.build();
 	}
 
 }
